FIPS-13010/FIPS-13011 :: Replace deprecated constructors for Locale and URL
Change-Id: Icf0b3a6c8f1084b5314e2e6f9af65912d375c984